--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "17.0.2",
     "react-google-login": "^5.2.2",
+    "react-loader-spinner": "^6.1.6",
     "react-toastify": "^9.1.3",
     "react-type-animation": "^3.1.0"
   },
@@ -32,6 +33,7 @@
     "@types/next": "^9.0.0",
     "@types/react": "17.0.21",
     "autoprefixer": "^10.4.2",
+    "cross-env": "^7.0.3",
     "cssnano": "^5.0.12",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
