--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@react-oauth/google": "^0.11.1",
+    "@react-spring/web": "^9.7.3",
     "aos": "^2.3.4",
     "axios": "^1.5.0",
     "chart.js": "^3.6.1",
